| Bug #57827 | Adding UNIQUE index to disk data table is very slow with moderate amount of data | ||
|---|---|---|---|
| Submitted: | 28 Oct 2010 22:08 | Modified: | 4 Nov 2010 15:35 |
| Reporter: | Daniel Smythe | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | 7.1.6 | OS: | Any |
| Assigned to: | Frazer Clement | CPU Architecture: | Any |
| Tags: | disk data tables, ndb_restore, unique index | ||
[28 Oct 2010 22:08]
Daniel Smythe
[29 Oct 2010 15:23]
Frazer Clement
Proposed patch
Attachment: bug57827.patch (text/x-patch), 3.41 KiB.
[29 Oct 2010 15:23]
Frazer Clement
DICT tells TRIX to tell SUMA to tell LQH not to scan disk for Unique index build.
[29 Oct 2010 15:24]
Frazer Clement
Should probably fix in 6.2/6.3+
[29 Oct 2010 18:06]
Daniel Smythe
Without patch, the above mentioned test ran in 572m 5.767s With patch, same test ran in 2m 44.467s Tested on 7.1.6
[29 Oct 2010 19:34]
Jonas Oreland
6.3 is sufficient
[1 Nov 2010 13:17]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/122429 3330 Frazer Clement 2010-11-01 Bug#57827 Adding UNIQUE index to disk data table is very slow with moderate amount of data Modify unique index build not to read disk based columns.
[1 Nov 2010 14:33]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.51-ndb-7.0.20 (revid:frazer@mysql.com-20101101141607-cu5p3i9n0jepzwer) (version source revid:frazer@mysql.com-20101101141607-cu5p3i9n0jepzwer) (merge vers: 5.1.51-ndb-7.0.20) (pib:21)
[1 Nov 2010 14:34]
Bugs System
Pushed into mysql-5.1-telco-6.3 5.1.51-ndb-6.3.39 (revid:frazer@mysql.com-20101101131522-33zap16jsi2lj8mw) (version source revid:frazer@mysql.com-20101101131522-33zap16jsi2lj8mw) (merge vers: 5.1.51-ndb-6.3.39) (pib:21)
[1 Nov 2010 15:40]
Frazer Clement
Also pushed to 7.1.9
[4 Nov 2010 15:35]
Jon Stephens
Documented fix in the NDB-6.3.39, 7.0.20, and 7.1.9 changelogs, as follows:
Adding unique indexes to NDB tables could take an extremely long
time. This was particularly noticeable when using ndb_restore
--rebuild-indexes.
Closed.
