Bug#57827 Adding UNIQUE index to disk data table is very slow with moderate amount of data

Modify unique index build not to read disk based columns.